Resolved visibility button inconcistency

--- a/frontend/src/styles/add-password-page.css
+++ b/frontend/src/styles/add-password-page.css
@@ -70,12 +70,18 @@
 }
 
 .add-password-form__input-row button {
-  min-width: 86px;
+  width: 52px;
+  min-width: 52px;
   border: 0;
   border-left: 2px solid var(--color-text);
   background-color: var(--color-primary-soft);
   color: var(--color-dark);
   cursor: pointer;
+}
+
+.add-password-form__icon-button {
+  display: grid;
+  place-items: center;
 }
 
 .add-password-form__input-row button:hover {
